--- a/pizza-store-pcc-client/pom.xml
+++ b/pizza-store-pcc-client/pom.xml
@@ -83,10 +83,10 @@
 		</dependency>
 
 		<!-- HyperSQL DB -->
-<!-- 		<dependency>
+ 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
             <groupId>mysql</groupId>
